--- a/templates/header.html
+++ b/templates/header.html
@@ -46,7 +46,7 @@
         }
         
         #logout {
-            display: none;
+            /* display: none; */
         }
         
         @media only screen and (max-width: 770px) {
@@ -77,18 +77,24 @@
                 <li class="nav-item">
                     <a class="nav-link" id="login" href="{% url 'login' %}">SignUp/Login</a>
                 </li>
-
+                {% if request.session.username %}
+                <style>
+                    #login {
+                        display: none;
+                    }
+                </style>
                 <li class="nav-item">
                     <a class="nav-link" id="logout" href="{% url 'logout' %}">Logout</a>
                 </li>
-
+                {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'ticket' %}">Purchase Ticket</a>
+                    <a class="nav-link" href="{% url 'check_ticket' %}">Purchase Ticket</a>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="/">About</a>
                 </li>
+                {% if request.session.username == "admin" %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                       Admin Panel
@@ -98,7 +104,7 @@
                         <a class="dropdown-item" href="{% url 'ticket_info' %}">Ticket Details</a>
                     </div>
                 </li>
-
+                {% endif %}
             </ul>
         </div>
     </nav>
