--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,15 @@
 
 <head>
     <title>Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="{% static 'style.css' %}" rel="stylesheet">
     <style>
         .carousel-item img {
             width: 100%;
             max-height: 450px;
         }
-        /* .carousel {
-            background-image: url("img/railway.jpg");
-            filter: blur(8px);
-            -webkit-filter: blur(8px);
-            height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-         */
         
         .carousel {
             background-color: rgb(13, 39, 51);
@@ -29,6 +23,192 @@
             /* border-radius: 10px; */
         }
         
+        .media-body h3 {
+            font-weight: bold;
+            font-size: 18px;
+        }
+        
+        .media-body p {
+            color: gray;
+            font-size: 14px;
+        }
+        
+        .services {
+            display: block;
+            width: 100%;
+            position: relative;
+            -moz-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            -webkit-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+        }
+        
+        .services .d-block {
+            margin-bottom: 20px;
+        }
+        
+        .services .icon {
+            line-height: 1.3;
+            position: relative;
+            width: 70px;
+            height: 70px;
+            margin: 0 auto;
+            position: relative;
+            z-index: 0;
+            border-radius: 50%;
+            background: #f44336;
+            -webkit-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
+            -moz-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
+        }
+        
+        .services .icon span {
+            font-size: 40px;
+            color: #fff;
+        }
+        
+        .services .media-body h3 {
+            font-weight: 700;
+            font-size: 18px;
+            color: #000000;
+        }
+        
+        .services .btn-custom {
+            font-size: 12px;
+            font-weight: 500;
+            text-transform: uppercase;
+            color: #000000;
+            border-bottom: 2px solid #e6e6e6;
+        }
+        
+        .services .btn-custom:hover {
+            color: #064acb;
+            border-color: #064acb;
+        }
+        
+        .services-2 {
+            margin: 0;
+            padding: 0;
+        }
+        
+        .services-2 li {
+            list-style: none;
+        }
+        
+        .services-2 li span {
+            color: #064acb;
+            margin-right: 20px;
+        }
+        
+        #section-counter {
+            position: relative;
+            z-index: 0;
+        }
+        
+        .ftco-counter {
+            overflow-x: hidden;
+            position: relative;
+            padding: 4em 0;
+            background: #202020;
+        }
+        
+        @media (min-width: 992px) {
+            .intro-wrap {
+                margin-top: -15px;
+            }
+        }
+        
+        .bg-intro {
+            background: #f44336;
+            width: 100%;
+            position: relative;
+        }
+        
+        .bg-intro:after {
+            position: absolute;
+            top: 0;
+            right: 100%;
+            bottom: 0;
+            content: '';
+            width: 360%;
+            background: #f44336;
+        }
+        
+        @media (max-width: 991.98px) {
+            .bg-intro:after {
+                background: transparent;
+                display: none;
+            }
+        }
+        
+        .bg-intro .intro-box {
+            width: calc(100% - 240px);
+            padding: 20px 0;
+        }
+        
+        @media (max-width: 991.98px) {
+            .bg-intro .intro-box {
+                width: 100%;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        }
+        
+        .bg-intro .intro-box h2 {
+            display: block;
+            color: #fff;
+            margin-left: 20px;
+        }
+        
+        .bg-intro .intro-box h2 span {
+            color: rgba(255, 255, 255, 0.541);
+        }
+        
+        .bg-intro .intro-box .icon {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+        
+        .bg-intro .intro-box .icon i {
+            font-size: 24px;
+            color: #fff;
+        }
+        
+        .bg-intro .btn-custom {
+            width: 240px;
+            display: block;
+            text-align: center;
+            color: #000000;
+        }
+        
+        .bg-intro a {
+            background-color: #0c89ec;
+        }
+        
+        .bg-intro a:hover {
+            background-color: #f72440;
+            text-decoration: none;
+        }
+        
+        @media (max-width: 767.98px) {
+            .bg-intro .btn-custom {
+                width: 100%;
+                padding: 20px 0;
+            }
+        }
+        
+        .bg-intro .btn-custom span {
+            margin: 0 auto;
+        }
+        
+        .bg-intro h2 {
+            font-size: 18px;
+            margin-bottom: 0;
+        }
+        
         @media only screen and (max-width: 770px) {
             ul li a {
                 border: none;
@@ -38,7 +218,8 @@
 </head>
 
 <body>
-    <div id="carouselExampleIndicators" class="carousel slide" data-interval="1500" data-ride="carousel">
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-interval="2000" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -46,13 +227,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="{% static 'img/r1.jpg' %}" class="d-block w-100" alt="...">
+                <img src="{% static 'img/r3.jpg' %}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="{% static 'img/r2.jpg' %}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'img/r3.jpg' %}" class="d-block w-100" alt="...">
+                <img src="{% static 'img/route.jpg' %}" class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -64,8 +245,108 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <br><br><br>
+    <section class="intro ">
+        <div class="container intro-wrap">
+            <div class="row no-gutters">
+                <div class="col-md-12 col-lg-9 bg-intro d-sm-flex align-items-center align-items-stretch">
+                    <div class="intro-box d-flex align-items-center">
+                        <div class="icon d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/ticket.png' %}" alt="">
+                        </div>
+                        <h2 class="mb-0">Are you here? <span>Let's Travel!</span></h2>
+                    </div>
+                    <a href="{% url 'check_ticket' %}" class="btn-custom d-flex align-items-center"><span>Purchase Ticket</span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <section class="ftco-section">
+        <div class="container">
+            <div class="row justify-content-center pb-5 mb-3">
+                <div class="col-md-7 heading-section text-center ftco-animate">
+                    <span class="subheading">We offer Services</span>
+                    <h2>Our Booking Services</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 services ftco-animate">
+                    <div class="d-block d-flex">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <img src="{% static 'img/station.png' %}" alt="">
+                        </div>
+                        <div class="media-body pl-3">
+                            <h3 class="heading">Stations</h3>
+                            <p>You can see all the stations at ticket Purchase Page and confirm purchasing with desired stations.</p>
+                            <!-- <p><a href="#" class="btn-custom">Read more</a></p> -->
+                            <br>
+                        </div>
+                    </div>
+                    <div class="d-block d-flex">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <img src="{% static 'img/search.png' %}" alt="">
+                        </div>
+                        <div class="media-body pl-3">
+                            <h3 class="heading">Checking Availability</h3>
+                            <p>It's possible to check ticket availability before purchase even without login into the system.</p>
+                            <!-- <p><a href="#" class="btn-custom">Read more</a></p> -->
+                            <br>
+                        </div>
+                    </div>
 
+                </div>
+                <div class="col-md-4 services ftco-animate">
+                    <div class="d-block d-flex">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <img src="{% static 'img/ticket.png' %}" alt="">
+                        </div>
+                        <div class="media-body pl-3">
+                            <h3 class="heading">Purchase Ticket</h3>
+                            <p>We provides two types of service for purchasing ticket. You can purchase ticket with random or custom selection as you want.</p>
+                            <!-- <p><a href="#" class="btn-custom">Read more</a></p> -->
+                            <br>
+                        </div>
+                    </div>
+                    <div class="d-block d-flex">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <img src="{% static 'img/record.png' %}" alt="">
+                        </div>
+                        <div class="media-body pl-3">
+                            <h3 class="heading">Previous Record</h3>
+                            <p>You can see own profile and check previous booking records such as 'last purchase date'.</p>
+                            <!-- <p><a href="#" class="btn-custom">Read more</a></p> -->
+                            <br>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 services ftco-animate">
+                    <div class="d-block d-flex">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <img src="{% static 'img/pay.png' %}" alt="">
+                        </div>
+                        <div class="media-body pl-3">
+                            <h3 class="heading">Payment</h3>
+                            <p>Online payment is available with bkash/rocket/card payment. You can also pay at your source station counter.</p>
+                            <!-- <p><a href="#" class="btn-custom">Read more</a></p> -->
+                            <br>
+                        </div>
+                    </div>
+                    <div class="d-block d-flex">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <img src="{% static 'img/limit.png' %}" alt="">
+                        </div>
+                        <div class="media-body pl-3">
+                            <h3 class="heading">Limitation for Purchase</h3>
+                            <p>Each person can purchase maximum 4 tickets as fraudulent person cannot harm to others. </p>
+                            <!-- <p><a href="#" class="btn-custom">Read more</a></p> -->
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
