--- a/main/static/style.css
+++ b/main/static/style.css
@@ -5,20 +5,32 @@
     background-position: center;
 }
 
-.form-left {
-    width: 100%;
+.form-body2 {
     background-image: url(./img/railway.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
+.form-left {
+    width: 0%;
+    background-image: url(./img/railway.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.form-detail .tabcontent {
+    width: 50%;
+    margin: 0 auto;
+}
+
 .page-content {
     width: 100%;
     margin: 0 auto;
-    background-image: -moz-linear-gradient( 136deg, rgb(0, 158, 253) 0%, rgb(42, 245, 152) 100%);
-    background-image: -webkit-linear-gradient( 136deg, rgb(0, 158, 253) 0%, rgb(42, 245, 152) 100%);
-    background-image: -ms-linear-gradient( 136deg, rgb(0, 158, 253) 0%, rgb(42, 245, 152) 100%);
+    /* background-image: -moz-linear-gradient( 136deg, rgb(0, 158, 253) 0%, rgb(42, 245, 152) 100%); */
+    /* background-image: -webkit-linear-gradient( 136deg, rgb(0, 158, 253) 0%, rgb(42, 245, 152) 100%); */
+    /* background-image: -ms-linear-gradient( 136deg, rgb(0, 158, 253) 0%, rgb(42, 245, 152) 100%); */
     display: flex;
     display: -webkit-flex;
     justify-content: center;
@@ -34,7 +46,7 @@
 }
 
 .form-v8-content {
-    background: #fff;
+    background: none;
     width: 80%;
     border-radius: 8px;
     -o-border-radius: 8px;
@@ -67,7 +79,7 @@
     padding: 30px 0;
     position: relative;
     width: 100%;
-    background: #3d5983;
+    background: #1b2b3a96;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
 }
