:bulb: services with description

--- a/templates/index.html
+++ b/templates/index.html
@@ -327,7 +327,7 @@
                         </div>
                         <div class="media-body pl-3">
                             <h3 class="heading">Payment</h3>
-                            <p>Online payment is available with bkash/rocket/card payment. You can also pay at your source station counter.</p>
+                            <p>Online payment is available with bkash/rocket/card payment. You can also pay at any station counter.</p>
                             <!-- <p><a href="#" class="btn-custom">Read more</a></p> -->
                             <br>
                         </div>
